[build-system]
requires = ["setuptools>=50.3.2", "wheel>=0.35.1"]
build-backend = "setuptools.build_meta"

[tool.isort]
# Added for compatability with black
profile = "black"
multi_line_output = 3

[tool.coverage.run]
omit = [
    "__init__.py",
]
branch = true

[tool.mypy]
files = [
    "pymechtest/**/*.py",
    "noxfile.py",
]

ignore_missing_imports = true
strict = true
disallow_untyped_decorators = false
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
