[metadata]
name = pymechtest
version = 0.1.1
description = Python package to automate the boring bits of mechanical test data analysis!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FollowTheProcess/pymechtest
author = Tom Fleet
author_email = tomfleet2018@gmail.com
license = GNU General Public License v3
classifiers =
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Typing :: Typed
test_suite = tests
project_urls = 
    Documentation = https://FollowTheProcess.github.io/pymechtest/

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires = 
    pandas>=1.1.4
    numpy>=1.19.4
    altair>=4.1.0
    altair_data_server>=0.4.1
    altair_saver>=0.5.0

[options.extras_require]
dev = 
    bump2version>=1.0.1
    flake8>=3.8.4
    isort>=5.6.4
    nox>=2020.8.22
    black>=20.8b1
    twine>=3.2.0
    pytest>=6.1.2
    pytest-cov>=2.10.1
    mypy>=0.790
    mkdocs>=1.1.2
    mkdocs-material>=6.2.2
    mkdocstrings>=0.13.6
    build>=0.1.0
test =
    pytest>=6.1.2
    pytest-cov>=2.10.1
cov = 
    coverage>=5.3.1
    toml>=0.10.2
docs =
    mkdocs>=1.1.2
    mkdocs-material>=6.2.2
    mkdocstrings>=0.13.6
lint =
    flake8>=3.8.4
    isort>=5.6.4
    black>=20.8b1
    mypy>=0.790


[options.packages.find]
where = pymechtest
exclude =
    tests,
    docs

[bdist_wheel]
universal = 1

[flake8]
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mpypy_cache,
    venv/,
    .venv/,
    docs,
    site,
    .nox,
    *.egg,
    *.egg-info,
    build
max-complexity = 10
max-line-length = 88
extend-ignore =
    E203, # Black compatability: whitespace before :
    W503, # Black compatability: line break before binary operator

[mypy]
# Ignore for 3rd party packages without type info
ignore_missing_imports = True

[mypy-venv.*]
# Ignore venv
ignore_errors = True

[mypy-.venv.*]
# Ignore .venv
ignore_errors = True