[metadata]
name = pymechtest
version = attr: pymechtest.__version__
description = Python package to automate the boring bits of mechanical test data analysis!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FollowTheProcess/pymechtest
author = Tom Fleet
author_email = tomfleet2018@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Typing :: Typed
project_urls =
    Documentation = https://FollowTheProcess.github.io/pymechtest/
    Source = https://github.com/FollowTheProcess/pymechtest
test_suite = tests

[options]
packages = find:
install_requires =
    altair>=4.1.0
    altair_data_server>=0.4.1
    altair_saver>=0.5.0
    numpy>=1.19.4
    pandas>=1.1.4
python_requires = >=3.7
include_package_data = true
zip_safe = False

[options.extras_require]
cov =
    coverage-badge>=1.0.1
    coverage[toml]>=5.5
dev =
    black>=21.6b0
    build>=0.5.1
    bump2version>=1.0.1
    coverage-badge>=1.0.1
    flake8>=3.9.2
    isort>=5.9.1
    livereload>=2.6.3
    markdown-include>=0.6.0
    mkdocs>=1.2.0
    mkdocs-material>=7.1.9
    mkdocstrings>=0.15.2
    mypy>=0.902
    nox>=2021.6.6
    pytest>=6.2.4
    pytest-cov>=2.12.1
docs =
    livereload>=2.6.3
    markdown-include>=0.6.0
    mkdocs>=1.2.0
    mkdocs-material>=7.1.9
    mkdocstrings>=0.15.2
lint =
    black>=21.6b0
    flake8>=3.9.2
    isort>=5.9.1
    mypy>=0.902
test =
    coverage[toml]>=5.5
    pytest>=6.2.4
    pytest-cov>=2.12.1

[options.package_data]
typed = pymechtest/py.typed

[bumpversion]
current_version = 0.1.4
commit = True
tag = True

[bumpversion:file:pymechtest/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    venv/,
    .venv/,
    docs,
    site,
    .nox,
    *.egg,
    *.egg-info,
    build,
    dist
max-complexity = 15
max-line-length = 88
extend-ignore =
    E203, # Black compatability: whitespace before :
    W503, # Black compatability: line break before binary operator
